# ocfl-s3-validator

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/ocfl_s3_validator/: __init__.py  object_validator.py  validation_result.py
src/python_package_template/: hello_world.py
tests/: test_object_validator.py  test_validation_result.py
